# Worksmart

./: .gitignore  COMMANDS.sh  README.md  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: audit.yml  cloud-publish.yaml  dev-release.yml  release.yml
src/: App.css  App.scss  App.tsx  Login.tsx  Permissions.tsx  Settings.tsx  Timecard.tsx  Track.tsx  index.html  main.tsx  types.ts
src-tauri/: Cargo.toml  Makefile  info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/scripts/: prepareSidecars.js
src-tauri/src/: auth.rs  autostart.rs  camera.rs  commands.rs  compressor.rs  configuration.rs  encoder.rs  lib.rs  main.rs  permissions.rs  recorder.rs  screen_capture.rs  session.rs  shutdown.rs  state.rs  storage.rs  time_map.rs  utils.rs  windows.rs
src/helper/: index.ts
src/ipc/: index.ts
src/styles/: Login.scss  Permissions.css  Settings.css  TimeCard.css  Track.css
