[package]
name = "worksmart"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.13"
tokio = { version = "1.40.0", features = ["full"] }
core-graphics = "0.24.0"
# rdev = { version = "0.5.3", features = ["unstable_grab"] }
rdev = { git = "https://github.com/fufesou/rdev" }
rand = "0.8.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
