[package]
name = "worksmart"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.13"
tokio = { version = "1.40.0", features = ["full"] }
core-graphics = "0.24.0"
# rdev = { version = "0.5.3", features = ["unstable_grab"] }
rdev = { git = "https://github.com/fufesou/rdev" }
rand = "0.8.5"
scap = "0.0.5"
gst = { version = "0.22.5", package = "gstreamer", features = ["v1_24"] }
gst_app = { version = "0.22.0", package = "gstreamer-app", features = [
    "v1_24",
] }
gst-plugin-fallbackswitch = "0.12.4"
chrono = "0.4.38"
chrono-tz = "0.10.0"
iana-time-zone = "0.1.61"
directories = "5.0"
bincode = "1.3.3"

nokhwa = { version = "0.10.3", features = [
    "input-native",
    "output-threaded",
], git = "https://github.com/CapSoftware/nokhwa.git", branch = "brendonovich-fork" }
dcv-color-primitives = "0.6.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
